updating structure