@@ -2,27 +2,33 @@ package lab4.backend.api.resources;
 
 import jakarta.ejb.EJB;
 import jakarta.ws.rs.*;
-import jakarta.ws.rs.core.Cookie;
 import jakarta.ws.rs.core.MediaType;
+import lab4.backend.api.models.ResultResponseModel;
+import lab4.backend.api.utils.annotations.ApiExceptionHandler;
+import lab4.backend.api.utils.filters.auth.AuthorizationHeader;
 import lab4.backend.api.utils.filters.auth.AuthorizedOnly;
-import lab4.backend.api.models.result.request.DotRequestModel;
-import lab4.backend.api.models.result.response.ResultResponseModel;
-import lab4.backend.api.utils.mapping.ResultMapper;
 import lab4.backend.dto.DotDTO;
 import lab4.backend.dto.ResultDTO;
 import lab4.backend.dto.TokenDTO;
 import lab4.backend.dto.UserDTO;
 import lab4.backend.services.AuthService;
 import lab4.backend.services.ResultService;
+import lombok.AllArgsConstructor;
+import lombok.Data;
+import lombok.NoArgsConstructor;
 import lombok.extern.java.Log;
 
+import java.math.BigDecimal;
+import java.time.LocalDateTime;
 import java.util.List;
 import java.util.stream.Collectors;
+
 
 @Path("/dots")
 @Consumes(MediaType.APPLICATION_JSON)
 @Produces(MediaType.APPLICATION_JSON)
 @AuthorizedOnly
+@ApiExceptionHandler
 @Log
 public class ResultResource {
     @EJB
@@ -33,20 +39,21 @@ public class ResultResource {
 
     @POST
     @Path("/check")
-    public ResultResponseModel checkHit(DotRequestModel requestModel, @HeaderParam("Authorization") String header) {
-        DotDTO dotDTO = ResultMapper.dotRequestModelToDotDTO(requestModel);
+    public ResultResponseModel checkHit(DotDTO dotDTO, @HeaderParam("Authorization") String header) {
         UserDTO userDTO = getUserFromHeader(header);
         ResultDTO resultDTO = resultService.checkHit(dotDTO, userDTO);
-        return ResultMapper.resultDtoToResultResponseModel(resultDTO);
+        return ResultResponseModel.fromResultDTO(resultDTO);
     }
 
     @GET
-        @Path("/all")
+    @Path("/all")
     public List<ResultResponseModel> getAllResults(@HeaderParam("Authorization") String header) {
         UserDTO userDTO = getUserFromHeader(header);
-        return resultService.getAllResultsForUser(userDTO).stream()
-                .map(ResultMapper::resultDtoToResultResponseModel)
-                .collect(Collectors.toList());
+        List<ResultDTO> results = resultService.getAllResultsForUser(userDTO);
+        List<ResultResponseModel> resultsModels = results.stream()
+                .map(ResultResponseModel::fromResultDTO)
+                .toList();
+        return resultsModels;
     }
 
     @DELETE
@@ -57,7 +64,7 @@ public class ResultResource {
     }
 
     private UserDTO getUserFromHeader(String header) {
-        String token = header.split(" ")[1];
-        return authService.getUserByToken(TokenDTO.builder().token(token).build());
+        AuthorizationHeader authHeader = new AuthorizationHeader(header);
+        return authService.getUserByToken(TokenDTO.builder().token(authHeader.getToken()).build());
     }
 }
